postcss/testData/inspections/customSelectors/emptyCustomSelector.pcss
@custom-selector <error descr="Custom selector name expected">.</error>my-class;
@custom-selector<EOLError descr="';' expected"></EOLError>